chore: prepare risk platform repo for sharing